--- a/package.json
+++ b/package.json
@@ -5,6 +5,7 @@
   "main": "index.js",
   "scripts": {
     "start": "node server.js",
+    "dev": "nodemon server.js",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "repository": {
@@ -21,6 +22,7 @@
     "axios": "^0.18.0",
     "dotenv": "^6.2.0",
     "nodemon": "^1.18.9",
+    "puppeteer": "^1.11.0",
     "request": "^2.88.0",
     "yargs": "^4.8.1"
   }
