--- a/package.json
+++ b/package.json
@@ -22,7 +22,7 @@
     "axios": "^0.18.0",
     "dotenv": "^6.2.0",
     "nodemon": "^1.18.9",
-    "puppeteer": "^1.11.0",
+    "puppeteer": "1.9.0",
     "request": "^2.88.0",
     "yargs": "^4.8.1"
   }
